# pyccwebgraph

./: LICENSE  README.md  design_spec.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
examples/: example_uses.md
src/pyccwebgraph/: __init__.py  ccwebgraph.py  converters.py  download.py  setup_utils.py
src/pyccwebgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bridge.py  test_converters.py  test_setup.py
